--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <button data-modal class="btn btn_white">Связаться с нами</button>
       </div>
     </header>
-        <div class="sidepanel">
-        <div class="sidepanel__text"><span>Социальные сети</span></div>
-        <div class="sidepanel__divider"></div>
-        <a href="#" class="sidepanel__icon">
+    <div class="sidepanel">
+      <div class="sidepanel__text"><span>Социальные сети</span></div>
+      <div class="sidepanel__divider"></div>
+      <a href="#" class="sidepanel__icon">
         <img src="icons/instagram.svg" alt="instagram" />
-        </a>
-        <a href="#" class="sidepanel__icon">
+      </a>
+      <a href="#" class="sidepanel__icon">
         <img src="icons/facebook.svg" alt="facebook" />
-        </a>
-        </div>
+      </a>
+    </div>
 
     <div class="preview">
       <div class="bgc_blue"></div>
@@ -130,18 +130,20 @@
             </div>
           </div>
           <div class="offer__slider-wrapper">
-            <div class="offer__slide">
-              <img src="img/slider/pepper.jpg" alt="pepper" />
+            <div class="offer__slider-inner">
+              <div class="offer__slide">
+                <img src="img/slider/pepper.jpg" alt="pepper" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/food-12.jpg" alt="food" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/olive-oil.jpg" alt="oil" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/paprika.jpg" alt="paprika" />
+              </div>
             </div>
-            <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
           </div>
         </div>
       </div>
@@ -155,12 +157,12 @@
         <div class="calculating__field">
           <div class="calculating__subtitle">Ваш пол</div>
           <div class="calculating__choose" id="gender">
-            <div
+            <div id="female"
               class="calculating__choose-item calculating__choose-item_active"
             >
               Женщина
             </div>
-            <div class="calculating__choose-item">Мужчина</div>
+            <div id="male" class="calculating__choose-item">Мужчина</div>
           </div>
 
           <div class="calculating__subtitle">Ваша конституция</div>
@@ -189,19 +191,20 @@
             Выберите вашу физическая активность
           </div>
           <div class="calculating__choose calculating__choose_big">
-            <div id="low" class="calculating__choose-item">
+            <div data-ratio="1.2" id="low" class="calculating__choose-item">
               Низкая активность
             </div>
             <div
+            data-ratio="1.375"
               id="small"
               class="calculating__choose-item calculating__choose-item_active"
             >
               Невысокая активность
             </div>
-            <div id="medium" class="calculating__choose-item">
+            <div data-ratio="1.55" id="medium" class="calculating__choose-item">
               Умеренная активность
             </div>
-            <div id="high" class="calculating__choose-item">
+            <div data-ratio="1.725" id="high" class="calculating__choose-item">
               Высокая активность
             </div>
           </div>
@@ -224,9 +227,7 @@
       <h2 class="title">Наше меню на день</h2>
 
       <div class="menu__field">
-        <div class="container">
-         
-        </div>
+        <div class="container"></div>
       </div>
     </div>
 
@@ -339,6 +340,6 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
